network-policy/app-service-b/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app-service-b
  labels:
    app.kubernetes.io/name: app-service-b
