network-policy/app-service-b/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-service-b
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: app-service-b
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app-service-b
    spec:
      containers:
        - name: nginx
          image: nginx:1.23-alpine
          ports:
            - name: http
              containerPort: 80
          volumeMounts:
            - name: nginx-templates
              mountPath: /etc/nginx/templates
      volumes:
        - name: nginx-templates
          configMap:
            name: app-service-b-nginx-templates
