network-policy/app-service-b/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service-b
spec:
  selector:
    app.kubernetes.io/name: app-service-b
  ports:
    - name: http
      port: 80
      targetPort: http
