network-policy/app-service-b/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: app-service-b
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: app-service-b
  policyTypes:
    - Ingress
    - Egress # deny all because spec.egress is empty
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              app.kubernetes.io/name: app-service-a
          podSelector:
            matchLabels:
              app.kubernetes.io/name: app-service-a
